commit bilingual contents

--- a/docs/visual-basic/misc/bc31107.md
+++ b/docs/visual-basic/misc/bc31107.md
@@ -1,5 +1,5 @@
 ---
-title: Funzioni di accesso proprietà non possono essere dichiarati '<accessmodifier>' in una proprietà 'Default'
+title: Le funzioni di accesso alle proprietà non possono essere dichiarate '<accessmodifier>' in una proprietà 'Default'
 ms.date: 07/20/2015
 f1_keywords:
 - bc31107
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC31107
 ms.assetid: 25657b33-df85-4535-8043-69795c987175
-ms.openlocfilehash: ae0bfc9c70c20b2d3c4148d7ebb3a13fa662fa5e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 17b2d9a6789d7bf007cd9856c48f649c80b5d792
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585508"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399332"
 ---
-# <a name="property-accessors-cannot-be-declared-accessmodifier-in-a-default-property"></a><span data-ttu-id="3a8b7-102">Funzioni di accesso proprietà non possono essere dichiarati '\<modificatoreaccesso >' in una proprietà 'Default'</span><span class="sxs-lookup"><span data-stu-id="3a8b7-102">Property accessors cannot be declared '\<accessmodifier>' in a 'Default' property</span></span>
-<span data-ttu-id="3a8b7-103">Oggetto [l'istruzione Get](../../visual-basic/language-reference/statements/get-statement.md) o [istruzione Set](../../visual-basic/language-reference/statements/set-statement.md) in un valore predefinito proprietà include il `Private` (parola chiave).</span><span class="sxs-lookup"><span data-stu-id="3a8b7-103">A [Get Statement](../../visual-basic/language-reference/statements/get-statement.md) or [Set Statement](../../visual-basic/language-reference/statements/set-statement.md) in a default property includes the `Private` keyword.</span></span>  
+# <a name="property-accessors-cannot-be-declared-accessmodifier-in-a-default-property"></a><span data-ttu-id="d3841-102">Le funzioni di accesso alle proprietà non possono essere dichiarate '\<accessmodifier>' in una proprietà 'Default'</span><span class="sxs-lookup"><span data-stu-id="d3841-102">Property accessors cannot be declared '\<accessmodifier>' in a 'Default' property</span></span>
+<span data-ttu-id="d3841-103">Un' [istruzione Get](../language-reference/statements/get-statement.md) o un' [istruzione set](../language-reference/statements/set-statement.md) in una proprietà predefinita include la `Private` parola chiave.</span><span class="sxs-lookup"><span data-stu-id="d3841-103">A [Get Statement](../language-reference/statements/get-statement.md) or [Set Statement](../language-reference/statements/set-statement.md) in a default property includes the `Private` keyword.</span></span>  
   
- <span data-ttu-id="3a8b7-104">Una proprietà predefinita non può essere `Private`e neanche possono esserlo le relative routine individuali (`Get` o `Set`).</span><span class="sxs-lookup"><span data-stu-id="3a8b7-104">A default property cannot be `Private`, and neither can its individual property procedures (`Get` or `Set`).</span></span>  
+ <span data-ttu-id="d3841-104">Una proprietà predefinita non può essere `Private`e neanche possono esserlo le relative routine individuali (`Get` o `Set`).</span><span class="sxs-lookup"><span data-stu-id="d3841-104">A default property cannot be `Private`, and neither can its individual property procedures (`Get` or `Set`).</span></span>  
   
- <span data-ttu-id="3a8b7-105">**ID errore:** BC31107</span><span class="sxs-lookup"><span data-stu-id="3a8b7-105">**Error ID:** BC31107</span></span>  
+ <span data-ttu-id="d3841-105">**ID errore:** BC31107</span><span class="sxs-lookup"><span data-stu-id="d3841-105">**Error ID:** BC31107</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3a8b7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3a8b7-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d3841-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d3841-106">To correct this error</span></span>  
   
-- <span data-ttu-id="3a8b7-107">Rimuovere la parola chiave `Private` dall'istruzione `Get` o `Set` oppure rimuovere `Default` dall' [Property Statement](../../visual-basic/language-reference/statements/property-statement.md).</span><span class="sxs-lookup"><span data-stu-id="3a8b7-107">Remove the `Private` keyword from the `Get` or `Set` statement, or remove `Default` from the [Property Statement](../../visual-basic/language-reference/statements/property-statement.md).</span></span>  
+- <span data-ttu-id="d3841-107">Rimuovere la parola chiave `Private` dall'istruzione `Get` o `Set` oppure rimuovere `Default` dall' [Property Statement](../language-reference/statements/property-statement.md).</span><span class="sxs-lookup"><span data-stu-id="d3841-107">Remove the `Private` keyword from the `Get` or `Set` statement, or remove `Default` from the [Property Statement](../language-reference/statements/property-statement.md).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3a8b7-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3a8b7-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d3841-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d3841-108">See also</span></span>
 
-- [<span data-ttu-id="3a8b7-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="3a8b7-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [<span data-ttu-id="3a8b7-110">Procedura: Dichiarare una proprietà con livelli di accesso misti</span><span class="sxs-lookup"><span data-stu-id="3a8b7-110">How to: Declare a Property with Mixed Access Levels</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
-- [<span data-ttu-id="3a8b7-111">Procedura: Dichiarare e chiamare una proprietà predefinita in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="3a8b7-111">How to: Declare and Call a Default Property in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-declare-and-call-a-default-property.md)
+- [<span data-ttu-id="d3841-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="d3841-109">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="d3841-110">Procedura: dichiarare una proprietà con livelli di accesso misti</span><span class="sxs-lookup"><span data-stu-id="d3841-110">How to: Declare a Property with Mixed Access Levels</span></span>](../programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
+- [<span data-ttu-id="d3841-111">Procedura: dichiarare e chiamare una proprietà predefinita in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d3841-111">How to: Declare and Call a Default Property in Visual Basic</span></span>](../programming-guide/language-features/procedures/how-to-declare-and-call-a-default-property.md)
