--- a/docs/visual-basic/misc/bc33037.md
+++ b/docs/visual-basic/misc/bc33037.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile copiare il valore del parametro 'ByRef' '<parametername>' ricopiato nell'argomento corrisponda perché tipo '<typename1>'non può essere convertito nel tipo'<typename2>'
+title: Non è possibile copiare il valore del parametro ' ByRef '' <parametername> ' nell'argomento corrispondente perché il tipo ' <typename1> ' non può essere convertito nel tipo ' <typename2> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33037
@@ -7,38 +7,38 @@ f1_keywords:
 helpviewer_keywords:
 - BC33037
 ms.assetid: 3ff137e2-e062-4e54-abf5-e902e2d18968
-ms.openlocfilehash: 94760c2a8bdde3839b11e4409184ca4bcf80ae8c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: df924804c07c686f4bb23d843d7cbd5fbc1fdba2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626587"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379692"
 ---
-# <a name="cannot-copy-the-value-of-byref-parameter-parametername-back-to-the-matching-argument-because-type-typename1-cannot-be-converted-to-type-typename2"></a><span data-ttu-id="1672f-102">Non è possibile copiare il valore del parametro 'ByRef' '\<nomeparametro >' ricopiato nell'argomento corrisponda perché tipo '\<NomeTipo1 >' non può essere convertito nel tipo '\<in NomeTipo2 >'</span><span class="sxs-lookup"><span data-stu-id="1672f-102">Cannot copy the value of 'ByRef' parameter '\<parametername>' back to the matching argument because type '\<typename1>' cannot be converted to type '\<typename2>'</span></span>
-<span data-ttu-id="1672f-103">Una routine è dichiarata con un tipo di parametro che non può essere riconvertito nel tipo dell'argomento chiamante.</span><span class="sxs-lookup"><span data-stu-id="1672f-103">A procedure is declared with a parameter type which cannot be converted back to the calling argument type.</span></span>  
+# <a name="cannot-copy-the-value-of-byref-parameter-parametername-back-to-the-matching-argument-because-type-typename1-cannot-be-converted-to-type-typename2"></a><span data-ttu-id="63408-102">Non è possibile copiare il valore del parametro ' ByRef '' \<parametername> ' nell'argomento corrispondente perché il tipo ' \<typename1> ' non può essere convertito nel tipo ' \<typename2> '</span><span class="sxs-lookup"><span data-stu-id="63408-102">Cannot copy the value of 'ByRef' parameter '\<parametername>' back to the matching argument because type '\<typename1>' cannot be converted to type '\<typename2>'</span></span>
+<span data-ttu-id="63408-103">Una routine è dichiarata con un tipo di parametro che non può essere riconvertito nel tipo dell'argomento chiamante.</span><span class="sxs-lookup"><span data-stu-id="63408-103">A procedure is declared with a parameter type which cannot be converted back to the calling argument type.</span></span>  
   
- <span data-ttu-id="1672f-104">Quando si definisce una classe o una struttura, è possibile definire uno o più operatori di conversione per convertire il tipo della classe o della struttura in altri tipi.</span><span class="sxs-lookup"><span data-stu-id="1672f-104">When you define a class or structure, you can define one or more conversion operators to convert that class or structure type to other types.</span></span> <span data-ttu-id="1672f-105">È anche possibile definire operatori di conversione inversi per riconvertire gli altri tipi nel tipo della classe o della struttura originale.</span><span class="sxs-lookup"><span data-stu-id="1672f-105">You can also define reverse conversion operators to convert those other types back to your class or structure type.</span></span> <span data-ttu-id="1672f-106">Quando si usa il tipo di classe o struttura in una chiamata di routine, Visual Basic possono usare gli operatori di conversione per convertire il tipo di argomento al tipo di parametro corrispondente.</span><span class="sxs-lookup"><span data-stu-id="1672f-106">When you use your class or structure type in a procedure call, Visual Basic can use these conversion operators to convert the type of an argument to the type of its corresponding parameter.</span></span>  
+ <span data-ttu-id="63408-104">Quando si definisce una classe o una struttura, è possibile definire uno o più operatori di conversione per convertire il tipo della classe o della struttura in altri tipi.</span><span class="sxs-lookup"><span data-stu-id="63408-104">When you define a class or structure, you can define one or more conversion operators to convert that class or structure type to other types.</span></span> <span data-ttu-id="63408-105">È anche possibile definire operatori di conversione inversi per riconvertire gli altri tipi nel tipo della classe o della struttura originale.</span><span class="sxs-lookup"><span data-stu-id="63408-105">You can also define reverse conversion operators to convert those other types back to your class or structure type.</span></span> <span data-ttu-id="63408-106">Quando si usa il tipo di classe o struttura in una chiamata di procedura, Visual Basic possibile usare questi operatori di conversione per convertire il tipo di un argomento nel tipo del parametro corrispondente.</span><span class="sxs-lookup"><span data-stu-id="63408-106">When you use your class or structure type in a procedure call, Visual Basic can use these conversion operators to convert the type of an argument to the type of its corresponding parameter.</span></span>  
   
- <span data-ttu-id="1672f-107">Se si passa l'argomento [ByRef](../../visual-basic/language-reference/modifiers/byref.md), Visual Basic copia a volte il valore dell'argomento in una variabile locale nella routine invece di passare un riferimento.</span><span class="sxs-lookup"><span data-stu-id="1672f-107">If you pass the argument [ByRef](../../visual-basic/language-reference/modifiers/byref.md), Visual Basic sometimes copies the argument value into a local variable in the procedure instead of passing a reference.</span></span> <span data-ttu-id="1672f-108">In tal caso, quando la procedura termina, Visual Basic deve quindi copiare il valore della variabile locale nell'argomento nel codice chiamante.</span><span class="sxs-lookup"><span data-stu-id="1672f-108">In such a case, when the procedure returns, Visual Basic must then copy the local variable value back into the argument in the calling code.</span></span>  
+ <span data-ttu-id="63408-107">Se si passa l'argomento [ByRef](../language-reference/modifiers/byref.md), Visual Basic talvolta copia il valore dell'argomento in una variabile locale nella routine invece di passare un riferimento.</span><span class="sxs-lookup"><span data-stu-id="63408-107">If you pass the argument [ByRef](../language-reference/modifiers/byref.md), Visual Basic sometimes copies the argument value into a local variable in the procedure instead of passing a reference.</span></span> <span data-ttu-id="63408-108">In tal caso, quando la procedura viene restituita, Visual Basic necessario copiare nuovamente il valore della variabile locale nell'argomento nel codice chiamante.</span><span class="sxs-lookup"><span data-stu-id="63408-108">In such a case, when the procedure returns, Visual Basic must then copy the local variable value back into the argument in the calling code.</span></span>  
   
- <span data-ttu-id="1672f-109">Se un valore dell'argomento `ByRef` viene copiato nella routine e l'argomento e il parametro sono dello stesso tipo, non è necessaria alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="1672f-109">If a `ByRef` argument value is copied into the procedure and the argument and parameter are of the same type, no conversion is necessary.</span></span> <span data-ttu-id="1672f-110">Ma se i tipi sono diversi, Visual Basic deve convertire in entrambe le direzioni.</span><span class="sxs-lookup"><span data-stu-id="1672f-110">But if the types are different, Visual Basic must convert in both directions.</span></span> <span data-ttu-id="1672f-111">Se uno dei tipi è il tipo di classe o struttura, Visual Basic è necessario convertirlo da e verso l'altro tipo.</span><span class="sxs-lookup"><span data-stu-id="1672f-111">If one of the types is your class or structure type, Visual Basic must convert it both to and from the other type.</span></span> <span data-ttu-id="1672f-112">Questo significa che è necessario definire operatori di conversione in entrambe le direzioni.</span><span class="sxs-lookup"><span data-stu-id="1672f-112">This means you must define conversion operators in both directions.</span></span>  
+ <span data-ttu-id="63408-109">Se un valore dell'argomento `ByRef` viene copiato nella routine e l'argomento e il parametro sono dello stesso tipo, non è necessaria alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="63408-109">If a `ByRef` argument value is copied into the procedure and the argument and parameter are of the same type, no conversion is necessary.</span></span> <span data-ttu-id="63408-110">Tuttavia, se i tipi sono diversi, Visual Basic necessario eseguire la conversione in entrambe le direzioni.</span><span class="sxs-lookup"><span data-stu-id="63408-110">But if the types are different, Visual Basic must convert in both directions.</span></span> <span data-ttu-id="63408-111">Se uno dei tipi è il tipo della classe o della struttura, Visual Basic necessario convertirlo in e da un altro tipo.</span><span class="sxs-lookup"><span data-stu-id="63408-111">If one of the types is your class or structure type, Visual Basic must convert it both to and from the other type.</span></span> <span data-ttu-id="63408-112">Questo significa che è necessario definire operatori di conversione in entrambe le direzioni.</span><span class="sxs-lookup"><span data-stu-id="63408-112">This means you must define conversion operators in both directions.</span></span>  
   
- <span data-ttu-id="1672f-113">**ID errore:** BC33037</span><span class="sxs-lookup"><span data-stu-id="1672f-113">**Error ID:** BC33037</span></span>  
+ <span data-ttu-id="63408-113">**ID errore:** BC33037</span><span class="sxs-lookup"><span data-stu-id="63408-113">**Error ID:** BC33037</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1672f-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1672f-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="63408-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="63408-114">To correct this error</span></span>  
   
-- <span data-ttu-id="1672f-115">Se possibile, usare un argomento chiamante dello stesso tipo del parametro di routine, in modo che Visual Basic non è necessario eseguire alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="1672f-115">If possible, use a calling argument of the same type as the procedure parameter, so Visual Basic does not need to do any conversion.</span></span>  
+- <span data-ttu-id="63408-115">Se possibile, usare un argomento chiamante dello stesso tipo del parametro della routine, in modo che Visual Basic non debba eseguire alcuna conversione.</span><span class="sxs-lookup"><span data-stu-id="63408-115">If possible, use a calling argument of the same type as the procedure parameter, so Visual Basic does not need to do any conversion.</span></span>  
   
-- <span data-ttu-id="1672f-116">Se è necessario chiamare la routine con un tipo di argomento diverso dal tipo del parametro, ma non è necessario restituire un valore nell'argomento chiamante, definire il parametro in modo che sia [ByVal](../../visual-basic/language-reference/modifiers/byval.md) invece che `ByRef`.</span><span class="sxs-lookup"><span data-stu-id="1672f-116">If you need to call the procedure with an argument type different from the parameter type but do not need to return a value into the calling argument, define the parameter to be [ByVal](../../visual-basic/language-reference/modifiers/byval.md) instead of `ByRef`.</span></span>  
+- <span data-ttu-id="63408-116">Se è necessario chiamare la routine con un tipo di argomento diverso dal tipo del parametro, ma non è necessario restituire un valore nell'argomento chiamante, definire il parametro in modo che sia [ByVal](../language-reference/modifiers/byval.md) invece che `ByRef`.</span><span class="sxs-lookup"><span data-stu-id="63408-116">If you need to call the procedure with an argument type different from the parameter type but do not need to return a value into the calling argument, define the parameter to be [ByVal](../language-reference/modifiers/byval.md) instead of `ByRef`.</span></span>  
   
-- <span data-ttu-id="1672f-117">Se è necessario restituire un valore nell'argomento chiamante, definire l'operatore di conversione inverso in modo che Visual Basic è possibile convertire nel tipo di argomento chiamante.</span><span class="sxs-lookup"><span data-stu-id="1672f-117">If you need to return a value into the calling argument, define the reverse conversion operator so Visual Basic can convert back to the calling argument type.</span></span>  
+- <span data-ttu-id="63408-117">Se è necessario restituire un valore nell'argomento chiamante, definire l'operatore di conversione inverso in modo che Visual Basic possibile eseguire la conversione al tipo di argomento chiamante.</span><span class="sxs-lookup"><span data-stu-id="63408-117">If you need to return a value into the calling argument, define the reverse conversion operator so Visual Basic can convert back to the calling argument type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1672f-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1672f-118">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="63408-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="63408-118">See also</span></span>
 
-- [<span data-ttu-id="1672f-119">Routine</span><span class="sxs-lookup"><span data-stu-id="1672f-119">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
-- [<span data-ttu-id="1672f-120">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="1672f-120">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
-- [<span data-ttu-id="1672f-121">Passaggio di argomenti per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="1672f-121">Passing Arguments by Value and by Reference</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
-- [<span data-ttu-id="1672f-122">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="1672f-122">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="1672f-123">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="1672f-123">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="1672f-124">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="1672f-124">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="1672f-125">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="1672f-125">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="63408-119">Procedure</span><span class="sxs-lookup"><span data-stu-id="63408-119">Procedures</span></span>](../programming-guide/language-features/procedures/index.md)
+- [<span data-ttu-id="63408-120">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="63408-120">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="63408-121">Passaggio di argomenti per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="63408-121">Passing Arguments by Value and by Reference</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-value-and-by-reference.md)
+- [<span data-ttu-id="63408-122">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="63408-122">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="63408-123">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="63408-123">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="63408-124">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="63408-124">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="63408-125">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="63408-125">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
