--- a/docs/visual-basic/misc/bc36600.md
+++ b/docs/visual-basic/misc/bc36600.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile di intervallo <variable> è già dichiarato
+title: La variabile di intervallo <variable> è già dichiarata
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36600
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36600
 ms.assetid: d53da04d-cd36-44ec-8b23-48cd81231191
-ms.openlocfilehash: 1d31c07b245b46c3c5c9e2237965bd98ac55e167
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 0410c767ac7d21c9d24a5be996860b70c043c6a1
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028525"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399020"
 ---
-# <a name="range-variable-variable-is-already-declared"></a><span data-ttu-id="0a6d0-102">Variabile di intervallo \<variabile > è già dichiarato</span><span class="sxs-lookup"><span data-stu-id="0a6d0-102">Range variable \<variable> is already declared</span></span>
-<span data-ttu-id="0a6d0-103">Un nome di variabile di intervallo specificato in una clausola `Select` , o la parte `Into` di una clausola `Aggregate`, `Group By`o `Group Join` , duplica il nome di una variabile di intervallo già specificata nella clausola di query.</span><span class="sxs-lookup"><span data-stu-id="0a6d0-103">A range variable name specified in a `Select` clause, or the `Into` part of an `Aggregate`, `Group By`, or `Group Join` clause, duplicates the name of a range variable already specified in the query clause.</span></span>  
+# <a name="range-variable-variable-is-already-declared"></a><span data-ttu-id="1cbed-102">La variabile di intervallo \<variable> è già dichiarata</span><span class="sxs-lookup"><span data-stu-id="1cbed-102">Range variable \<variable> is already declared</span></span>
+<span data-ttu-id="1cbed-103">Un nome di variabile di intervallo specificato in una clausola `Select` , o la parte `Into` di una clausola `Aggregate`, `Group By`o `Group Join` , duplica il nome di una variabile di intervallo già specificata nella clausola di query.</span><span class="sxs-lookup"><span data-stu-id="1cbed-103">A range variable name specified in a `Select` clause, or the `Into` part of an `Aggregate`, `Group By`, or `Group Join` clause, duplicates the name of a range variable already specified in the query clause.</span></span>  
   
- <span data-ttu-id="0a6d0-104">**ID errore:** BC36600</span><span class="sxs-lookup"><span data-stu-id="0a6d0-104">**Error ID:** BC36600</span></span>  
+ <span data-ttu-id="1cbed-104">**ID errore:** BC36600</span><span class="sxs-lookup"><span data-stu-id="1cbed-104">**Error ID:** BC36600</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0a6d0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0a6d0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1cbed-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1cbed-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="0a6d0-106">Verificare che tutte le variabili di intervallo in una clausola di query abbiano nomi univoci.</span><span class="sxs-lookup"><span data-stu-id="0a6d0-106">Ensure that all range variables in a query clause have unique names.</span></span>  
+1. <span data-ttu-id="1cbed-106">Verificare che tutte le variabili di intervallo in una clausola di query abbiano nomi univoci.</span><span class="sxs-lookup"><span data-stu-id="1cbed-106">Ensure that all range variables in a query clause have unique names.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0a6d0-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0a6d0-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1cbed-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1cbed-107">See also</span></span>
 
-- [<span data-ttu-id="0a6d0-108">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0a6d0-108">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [<span data-ttu-id="0a6d0-109">Clausola Aggregate</span><span class="sxs-lookup"><span data-stu-id="0a6d0-109">Aggregate Clause</span></span>](../../visual-basic/language-reference/queries/aggregate-clause.md)
-- [<span data-ttu-id="0a6d0-110">Clausola Select</span><span class="sxs-lookup"><span data-stu-id="0a6d0-110">Select Clause</span></span>](../../visual-basic/language-reference/queries/select-clause.md)
-- [<span data-ttu-id="0a6d0-111">Clausola Group By</span><span class="sxs-lookup"><span data-stu-id="0a6d0-111">Group By Clause</span></span>](../../visual-basic/language-reference/queries/group-by-clause.md)
-- [<span data-ttu-id="0a6d0-112">Clausola Group Join</span><span class="sxs-lookup"><span data-stu-id="0a6d0-112">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)
+- [<span data-ttu-id="1cbed-108">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1cbed-108">Introduction to LINQ in Visual Basic</span></span>](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="1cbed-109">Aggregate Clause</span><span class="sxs-lookup"><span data-stu-id="1cbed-109">Aggregate Clause</span></span>](../language-reference/queries/aggregate-clause.md)
+- [<span data-ttu-id="1cbed-110">Clausola SELECT</span><span class="sxs-lookup"><span data-stu-id="1cbed-110">Select Clause</span></span>](../language-reference/queries/select-clause.md)
+- [<span data-ttu-id="1cbed-111">Clausola Group By</span><span class="sxs-lookup"><span data-stu-id="1cbed-111">Group By Clause</span></span>](../language-reference/queries/group-by-clause.md)
+- [<span data-ttu-id="1cbed-112">Clausola Group Join</span><span class="sxs-lookup"><span data-stu-id="1cbed-112">Group Join Clause</span></span>](../language-reference/queries/group-join-clause.md)
