--- a/docs/visual-basic/misc/bc30217.md
+++ b/docs/visual-basic/misc/bc30217.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30217
 ms.assetid: 02e4f418-fd5d-41a4-8896-70d06eb5035a
-ms.openlocfilehash: 7b7fff11a22fd2fa90bb824e1974887a8ab35b0f
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 9adae55c2d72574711e6f8f3e2e307720ae85f75
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62028018"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409157"
 ---
-# <a name="string-constant-expected"></a><span data-ttu-id="1955a-102">È prevista una costante di stringa</span><span class="sxs-lookup"><span data-stu-id="1955a-102">String constant expected</span></span>
-<span data-ttu-id="1955a-103">Un carattere diverso da un segno di virgolette doppie (") si verifica dove il contesto richiede una costante di stringa.</span><span class="sxs-lookup"><span data-stu-id="1955a-103">A character other than a double quotation mark (") occurs where the context requires a string constant.</span></span> <span data-ttu-id="1955a-104">Una possibile causa è l'assenza delle virgolette dalla stringa.</span><span class="sxs-lookup"><span data-stu-id="1955a-104">One possible cause is that the quotation marks are missing from the string.</span></span>  
+# <a name="string-constant-expected"></a><span data-ttu-id="b6247-102">È prevista una costante di stringa</span><span class="sxs-lookup"><span data-stu-id="b6247-102">String constant expected</span></span>
+<span data-ttu-id="b6247-103">Un carattere diverso da un segno di virgolette doppie (") si verifica dove il contesto richiede una costante di stringa.</span><span class="sxs-lookup"><span data-stu-id="b6247-103">A character other than a double quotation mark (") occurs where the context requires a string constant.</span></span> <span data-ttu-id="b6247-104">Una possibile causa è l'assenza delle virgolette dalla stringa.</span><span class="sxs-lookup"><span data-stu-id="b6247-104">One possible cause is that the quotation marks are missing from the string.</span></span>  
   
- <span data-ttu-id="1955a-105">**ID errore:** BC30217</span><span class="sxs-lookup"><span data-stu-id="1955a-105">**Error ID:** BC30217</span></span>  
+ <span data-ttu-id="b6247-105">**ID errore:** BC30217</span><span class="sxs-lookup"><span data-stu-id="b6247-105">**Error ID:** BC30217</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1955a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1955a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b6247-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b6247-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="1955a-107">Verificare che la stringa sia correttamente racchiusa tra virgolette doppie.</span><span class="sxs-lookup"><span data-stu-id="1955a-107">Ensure that the string is properly enclosed in double quotation marks.</span></span>  
+1. <span data-ttu-id="b6247-107">Verificare che la stringa sia correttamente racchiusa tra virgolette doppie.</span><span class="sxs-lookup"><span data-stu-id="b6247-107">Ensure that the string is properly enclosed in double quotation marks.</span></span>  
   
-2. <span data-ttu-id="1955a-108">Specificare una costante di stringa.</span><span class="sxs-lookup"><span data-stu-id="1955a-108">Supply a string constant.</span></span>  
+2. <span data-ttu-id="b6247-108">Specificare una costante di stringa.</span><span class="sxs-lookup"><span data-stu-id="b6247-108">Supply a string constant.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1955a-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1955a-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b6247-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b6247-109">See also</span></span>
 
-- [<span data-ttu-id="1955a-110">Tipi di dati costanti e letterali</span><span class="sxs-lookup"><span data-stu-id="1955a-110">Constant and Literal Data Types</span></span>](../../visual-basic/programming-guide/language-features/constants-enums/constant-and-literal-data-types.md)
+- [<span data-ttu-id="b6247-110">Tipi di dati costanti e letterali</span><span class="sxs-lookup"><span data-stu-id="b6247-110">Constant and Literal Data Types</span></span>](../programming-guide/language-features/constants-enums/constant-and-literal-data-types.md)
