--- a/docs/visual-basic/misc/bc30231.md
+++ b/docs/visual-basic/misc/bc30231.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30231
 ms.assetid: 16e6c3ea-ce89-4646-8c3f-0ef51324bc13
-ms.openlocfilehash: 0c5a3cdcd801dda0723eff0a4d5ec94c189a85bd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1478b39f7f1d7f1a2a59243cd66284bb883647f7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64639151"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380068"
 ---
-# <a name="implements-not-valid-in-modules"></a><span data-ttu-id="dee45-102">'Implements' non valido nei moduli</span><span class="sxs-lookup"><span data-stu-id="dee45-102">'Implements' not valid in Modules</span></span>
-<span data-ttu-id="dee45-103">Un'istruzione o una clausola `Implements` si verifica all'interno di un modulo.</span><span class="sxs-lookup"><span data-stu-id="dee45-103">An `Implements` statement or clause occurs inside a module.</span></span> <span data-ttu-id="dee45-104">I moduli non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="dee45-104">Modules cannot implement interfaces.</span></span>  
+# <a name="implements-not-valid-in-modules"></a><span data-ttu-id="1d761-102">'Implements' non valido nei moduli</span><span class="sxs-lookup"><span data-stu-id="1d761-102">'Implements' not valid in Modules</span></span>
+<span data-ttu-id="1d761-103">Un'istruzione o una clausola `Implements` si verifica all'interno di un modulo.</span><span class="sxs-lookup"><span data-stu-id="1d761-103">An `Implements` statement or clause occurs inside a module.</span></span> <span data-ttu-id="1d761-104">I moduli non possono implementare le interfacce.</span><span class="sxs-lookup"><span data-stu-id="1d761-104">Modules cannot implement interfaces.</span></span>  
   
- <span data-ttu-id="dee45-105">**ID errore:** BC30231</span><span class="sxs-lookup"><span data-stu-id="dee45-105">**Error ID:** BC30231</span></span>  
+ <span data-ttu-id="1d761-105">**ID errore:** BC30231</span><span class="sxs-lookup"><span data-stu-id="1d761-105">**Error ID:** BC30231</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="dee45-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dee45-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1d761-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1d761-106">To correct this error</span></span>  
   
-- <span data-ttu-id="dee45-107">Rimuovere l'istruzione `Implements` o la clausola oppure digitare di nuovo il modulo come classe.</span><span class="sxs-lookup"><span data-stu-id="dee45-107">Remove the `Implements` statement or clause, or retype the module as a class.</span></span>  
+- <span data-ttu-id="1d761-107">Rimuovere l'istruzione `Implements` o la clausola oppure digitare di nuovo il modulo come classe.</span><span class="sxs-lookup"><span data-stu-id="1d761-107">Remove the `Implements` statement or clause, or retype the module as a class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="dee45-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dee45-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1d761-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1d761-108">See also</span></span>
 
-- [<span data-ttu-id="dee45-109">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="dee45-109">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)
-- [<span data-ttu-id="dee45-110">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="dee45-110">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="1d761-109">Istruzione Implements</span><span class="sxs-lookup"><span data-stu-id="1d761-109">Implements Statement</span></span>](../language-reference/statements/implements-statement.md)
+- [<span data-ttu-id="1d761-110">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="1d761-110">Module Statement</span></span>](../language-reference/statements/module-statement.md)
