--- a/docs/visual-basic/misc/bc30465.md
+++ b/docs/visual-basic/misc/bc30465.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30465
 ms.assetid: 726365f6-d6fc-454a-a43b-afa41bfea82a
-ms.openlocfilehash: 43368ad5b4be29418fcfbcd173c022d177b6a0c0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 191744a478ebcfa9447fd9679961b66ba167b5d0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588439"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84396064"
 ---
-# <a name="imports-statements-must-precede-any-declarations"></a><span data-ttu-id="00735-102">Le istruzioni 'Imports' devono precedere qualsiasi dichiarazione</span><span class="sxs-lookup"><span data-stu-id="00735-102">'Imports' statements must precede any declarations</span></span>
-<span data-ttu-id="00735-103">Un'istruzione `Imports` segue un'istruzione di dichiarazione all'interno di un file di origine.</span><span class="sxs-lookup"><span data-stu-id="00735-103">An `Imports` statement follows a declaration statement within a source file.</span></span>  
+# <a name="imports-statements-must-precede-any-declarations"></a><span data-ttu-id="7dcd3-102">Le istruzioni 'Imports' devono precedere qualsiasi dichiarazione</span><span class="sxs-lookup"><span data-stu-id="7dcd3-102">'Imports' statements must precede any declarations</span></span>
+<span data-ttu-id="7dcd3-103">Un'istruzione `Imports` segue un'istruzione di dichiarazione all'interno di un file di origine.</span><span class="sxs-lookup"><span data-stu-id="7dcd3-103">An `Imports` statement follows a declaration statement within a source file.</span></span>  
   
- <span data-ttu-id="00735-104">L'istruzione `Imports` importa i nomi degli spazi dei nomi da progetti e assembly di riferimento, nonché i nomi degli spazi dei nomi definiti all'interno dello stesso progetto in cui compare.</span><span class="sxs-lookup"><span data-stu-id="00735-104">The `Imports` statement imports namespace names from referenced projects and assemblies, as well as namespace names defined within the same project as the one in which it appears.</span></span> <span data-ttu-id="00735-105">Le istruzioni `Imports` devono essere inserire in un file di origine, prima di riferimento agli identificatori.</span><span class="sxs-lookup"><span data-stu-id="00735-105">`Imports` statements must be placed in a source file before any references to identifiers.</span></span>  
+ <span data-ttu-id="7dcd3-104">L'istruzione `Imports` importa i nomi degli spazi dei nomi da progetti e assembly di riferimento, nonché i nomi degli spazi dei nomi definiti all'interno dello stesso progetto in cui compare.</span><span class="sxs-lookup"><span data-stu-id="7dcd3-104">The `Imports` statement imports namespace names from referenced projects and assemblies, as well as namespace names defined within the same project as the one in which it appears.</span></span> <span data-ttu-id="7dcd3-105">Le istruzioni `Imports` devono essere inserire in un file di origine, prima di riferimento agli identificatori.</span><span class="sxs-lookup"><span data-stu-id="7dcd3-105">`Imports` statements must be placed in a source file before any references to identifiers.</span></span>  
   
- <span data-ttu-id="00735-106">**ID errore:** BC30465</span><span class="sxs-lookup"><span data-stu-id="00735-106">**Error ID:** BC30465</span></span>  
+ <span data-ttu-id="7dcd3-106">**ID errore:** BC30465</span><span class="sxs-lookup"><span data-stu-id="7dcd3-106">**Error ID:** BC30465</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="00735-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="00735-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7dcd3-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7dcd3-107">To correct this error</span></span>  
   
-- <span data-ttu-id="00735-108">Spostare l'istruzione `Imports` all'inizio del file di origine, prima di qualsiasi istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="00735-108">Move the `Imports` statement to the top of the source file, before any declaration statements.</span></span>  
+- <span data-ttu-id="7dcd3-108">Spostare l'istruzione `Imports` all'inizio del file di origine, prima di qualsiasi istruzione di dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="7dcd3-108">Move the `Imports` statement to the top of the source file, before any declaration statements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="00735-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="00735-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7dcd3-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7dcd3-109">See also</span></span>
 
-- [<span data-ttu-id="00735-110">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="00735-110">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [<span data-ttu-id="7dcd3-110">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="7dcd3-110">Imports Statement (.NET Namespace and Type)</span></span>](../language-reference/statements/imports-statement-net-namespace-and-type.md)
