--- a/docs/visual-basic/misc/bc33106.md
+++ b/docs/visual-basic/misc/bc33106.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC33106
 ms.assetid: 793eed88-a9f9-43e3-b657-c16795ecbbcc
-ms.openlocfilehash: de88260c733892b2405b154f2058f58ffaf2591d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d23e478e87324ad00fb9829729e987714dab2d23
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626534"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84361086"
 ---
-# <a name="cannot-infer-a-common-type-for-the-second-and-third-operands-of-the-if-operator"></a><span data-ttu-id="51e8d-102">Non è possibile dedurre un tipo comune per il secondo e il terzo operando dell'operatore 'If'</span><span class="sxs-lookup"><span data-stu-id="51e8d-102">Cannot infer a common type for the second and third operands of the 'If' operator</span></span>
-<span data-ttu-id="51e8d-103">Non è possibile dedurre un tipo comune per il secondo e il terzo operando dell'operatore 'If'.</span><span class="sxs-lookup"><span data-stu-id="51e8d-103">Cannot infer a common type for the second and third operands of the 'If' operator.</span></span> <span data-ttu-id="51e8d-104">Uno deve avere una conversione Widening nell'altro.</span><span class="sxs-lookup"><span data-stu-id="51e8d-104">One must have a widening conversion to the other.</span></span>  
+# <a name="cannot-infer-a-common-type-for-the-second-and-third-operands-of-the-if-operator"></a><span data-ttu-id="2dab2-102">Non è possibile dedurre un tipo comune per il secondo e il terzo operando dell'operatore 'If'</span><span class="sxs-lookup"><span data-stu-id="2dab2-102">Cannot infer a common type for the second and third operands of the 'If' operator</span></span>
+<span data-ttu-id="2dab2-103">Non è possibile dedurre un tipo comune per il secondo e il terzo operando dell'operatore 'If'.</span><span class="sxs-lookup"><span data-stu-id="2dab2-103">Cannot infer a common type for the second and third operands of the 'If' operator.</span></span> <span data-ttu-id="2dab2-104">Uno deve avere una conversione Widening nell'altro.</span><span class="sxs-lookup"><span data-stu-id="2dab2-104">One must have a widening conversion to the other.</span></span>  
   
- <span data-ttu-id="51e8d-105">Quando l'operatore `If` viene chiamato con tre argomenti, deve esistere una conversione verso un tipo di dati più grande tra il secondo e terzo argomento.</span><span class="sxs-lookup"><span data-stu-id="51e8d-105">When the `If` operator is called with three arguments, there must be a widening conversion between the second and third arguments.</span></span> <span data-ttu-id="51e8d-106">Ad esempio, poiché non è disponibile una conversione verso un tipo di dati più grande in entrambe le direzioni tra `Integer` e `String`, il codice seguente genera questo errore.</span><span class="sxs-lookup"><span data-stu-id="51e8d-106">For example, because there is not a widening conversion in either direction between `Integer` and `String`, the following code causes this error.</span></span>  
+ <span data-ttu-id="2dab2-105">Quando l'operatore `If` viene chiamato con tre argomenti, deve esistere una conversione verso un tipo di dati più grande tra il secondo e terzo argomento.</span><span class="sxs-lookup"><span data-stu-id="2dab2-105">When the `If` operator is called with three arguments, there must be a widening conversion between the second and third arguments.</span></span> <span data-ttu-id="2dab2-106">Ad esempio, poiché non è disponibile una conversione verso un tipo di dati più grande in entrambe le direzioni tra `Integer` e `String`, il codice seguente genera questo errore.</span><span class="sxs-lookup"><span data-stu-id="2dab2-106">For example, because there is not a widening conversion in either direction between `Integer` and `String`, the following code causes this error.</span></span>  
   
 ```vb  
 Dim divisor = 3  
@@ -25,16 +25,16 @@ Dim divisor = 3
 ' Console.WriteLine(If(divisor <> 0, number \ divisor, "Division by zero"))  
 ```  
   
- <span data-ttu-id="51e8d-107">**ID errore:** BC33106</span><span class="sxs-lookup"><span data-stu-id="51e8d-107">**Error ID:** BC33106</span></span>  
+ <span data-ttu-id="2dab2-107">**ID errore:** BC33106</span><span class="sxs-lookup"><span data-stu-id="2dab2-107">**Error ID:** BC33106</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="51e8d-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="51e8d-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2dab2-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2dab2-108">To correct this error</span></span>  
   
-- <span data-ttu-id="51e8d-109">Fornire una conversione esplicita per uno degli operandi, se possibile nel codice.</span><span class="sxs-lookup"><span data-stu-id="51e8d-109">Provide an explicit conversion for one of the operands, if that is possible in your code.</span></span>  
+- <span data-ttu-id="2dab2-109">Fornire una conversione esplicita per uno degli operandi, se possibile nel codice.</span><span class="sxs-lookup"><span data-stu-id="2dab2-109">Provide an explicit conversion for one of the operands, if that is possible in your code.</span></span>  
   
-- <span data-ttu-id="51e8d-110">Usare la costruzione di una condizione diversa, ad esempio un'istruzione `If...Then...Else` .</span><span class="sxs-lookup"><span data-stu-id="51e8d-110">Use a different condition construction, such as an `If...Then...Else` statement.</span></span>  
+- <span data-ttu-id="2dab2-110">Usare la costruzione di una condizione diversa, ad esempio un'istruzione `If...Then...Else` .</span><span class="sxs-lookup"><span data-stu-id="2dab2-110">Use a different condition construction, such as an `If...Then...Else` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="51e8d-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="51e8d-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2dab2-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2dab2-111">See also</span></span>
 
-- [<span data-ttu-id="51e8d-112">Operatore If</span><span class="sxs-lookup"><span data-stu-id="51e8d-112">If Operator</span></span>](../../visual-basic/language-reference/operators/if-operator.md)
-- [<span data-ttu-id="51e8d-113">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="51e8d-113">If...Then...Else Statement</span></span>](../../visual-basic/language-reference/statements/if-then-else-statement.md)
-- [<span data-ttu-id="51e8d-114">Conversioni di ampliamento e restrizione</span><span class="sxs-lookup"><span data-stu-id="51e8d-114">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [<span data-ttu-id="2dab2-112">Operatore If</span><span class="sxs-lookup"><span data-stu-id="2dab2-112">If Operator</span></span>](../language-reference/operators/if-operator.md)
+- [<span data-ttu-id="2dab2-113">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="2dab2-113">If...Then...Else Statement</span></span>](../language-reference/statements/if-then-else-statement.md)
+- [<span data-ttu-id="2dab2-114">Widening and Narrowing Conversions</span><span class="sxs-lookup"><span data-stu-id="2dab2-114">Widening and Narrowing Conversions</span></span>](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
