--- a/docs/visual-basic/misc/bc33109.md
+++ b/docs/visual-basic/misc/bc33109.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC33109
 ms.assetid: 135def20-3535-4239-bffb-43208d1b3f63
-ms.openlocfilehash: 7c173f9616802e052ed8dcbbee9bf9b8ebc3702f
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d8b2d149b3243cc181481627c982a94fe7a0f346
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61941778"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395960"
 ---
-# <a name="nullable-modifier-cannot-be-specified-in-variable-declarations-with-as-new"></a><span data-ttu-id="af415-102">Non è possibile specificare un modificatore nullable in dichiarazioni di variabili con 'As New'</span><span class="sxs-lookup"><span data-stu-id="af415-102">Nullable modifier cannot be specified in variable declarations with 'As New'</span></span>
-<span data-ttu-id="af415-103">Il modificatore di tipo nullable (?) è stato incluso in una dichiarazione di variabile in cui è stato specificato `As New` .</span><span class="sxs-lookup"><span data-stu-id="af415-103">The nullable type modifier (?) has been included in a variable declaration where `As New` has been specified.</span></span> <span data-ttu-id="af415-104">L'esempio seguente genera questo errore:</span><span class="sxs-lookup"><span data-stu-id="af415-104">The following example causes this error:</span></span>  
+# <a name="nullable-modifier-cannot-be-specified-in-variable-declarations-with-as-new"></a><span data-ttu-id="62734-102">Non è possibile specificare un modificatore nullable in dichiarazioni di variabili con 'As New'</span><span class="sxs-lookup"><span data-stu-id="62734-102">Nullable modifier cannot be specified in variable declarations with 'As New'</span></span>
+<span data-ttu-id="62734-103">Il modificatore di tipo nullable (?) è stato incluso in una dichiarazione di variabile in cui è stato specificato `As New` .</span><span class="sxs-lookup"><span data-stu-id="62734-103">The nullable type modifier (?) has been included in a variable declaration where `As New` has been specified.</span></span> <span data-ttu-id="62734-104">L'esempio seguente genera questo errore:</span><span class="sxs-lookup"><span data-stu-id="62734-104">The following example causes this error:</span></span>  
   
 ```vb  
 Dim num? As New ExampleStructure  
 ```  
   
- <span data-ttu-id="af415-105">**ID errore:** BC33109</span><span class="sxs-lookup"><span data-stu-id="af415-105">**Error ID:** BC33109</span></span>  
+ <span data-ttu-id="62734-105">**ID errore:** BC33109</span><span class="sxs-lookup"><span data-stu-id="62734-105">**Error ID:** BC33109</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="af415-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="af415-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="62734-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="62734-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="af415-107">Rimuovere la parola chiave `New` dalla dichiarazione di variabile che ammette valori nullable, come mostrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="af415-107">Remove the `New` keyword from the nullable variable declaration, as shown in the following example:</span></span>  
+1. <span data-ttu-id="62734-107">Rimuovere la parola chiave `New` dalla dichiarazione di variabile che ammette valori nullable, come mostrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="62734-107">Remove the `New` keyword from the nullable variable declaration, as shown in the following example:</span></span>  
   
 ```vb  
 Dim num? As ExampleStructure  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="af415-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="af415-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="62734-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="62734-108">See also</span></span>
 
-- [<span data-ttu-id="af415-109">Tipi di valori nullable</span><span class="sxs-lookup"><span data-stu-id="af415-109">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [<span data-ttu-id="62734-109">Tipi di valore Nullable</span><span class="sxs-lookup"><span data-stu-id="62734-109">Nullable Value Types</span></span>](../programming-guide/language-features/data-types/nullable-value-types.md)
