--- a/docs/visual-basic/misc/bc36553.md
+++ b/docs/visual-basic/misc/bc36553.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC36553
 ms.assetid: 8ea0b90c-f155-47a9-988b-5b8009b510af
-ms.openlocfilehash: f46c5264c1c837677e10a836f6457810389b7e27
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: cfa2d03368e49786b26a86627f10e63307a9ef27
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353526"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378458"
 ---
-# <a name="optional-cannot-be-applied-to-the-first-parameter-of-an-extension-method"></a><span data-ttu-id="8e65e-102">Impossibile applicare 'Optional' al primo parametro di un metodo di estensione</span><span class="sxs-lookup"><span data-stu-id="8e65e-102">'Optional' cannot be applied to the first parameter of an extension method</span></span>
-<span data-ttu-id="8e65e-103">Impossibile applicare 'Optional' al primo parametro di un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="8e65e-103">'Optional' cannot be applied to the first parameter of an extension method.</span></span> <span data-ttu-id="8e65e-104">Il primo parametro specifica il tipo da estendere.</span><span class="sxs-lookup"><span data-stu-id="8e65e-104">The first parameter specifies which type to extend.</span></span>  
+# <a name="optional-cannot-be-applied-to-the-first-parameter-of-an-extension-method"></a><span data-ttu-id="92d2c-102">Impossibile applicare 'Optional' al primo parametro di un metodo di estensione</span><span class="sxs-lookup"><span data-stu-id="92d2c-102">'Optional' cannot be applied to the first parameter of an extension method</span></span>
+<span data-ttu-id="92d2c-103">Impossibile applicare 'Optional' al primo parametro di un metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="92d2c-103">'Optional' cannot be applied to the first parameter of an extension method.</span></span> <span data-ttu-id="92d2c-104">Il primo parametro specifica il tipo da estendere.</span><span class="sxs-lookup"><span data-stu-id="92d2c-104">The first parameter specifies which type to extend.</span></span>  
   
- <span data-ttu-id="8e65e-105">Il primo parametro di un metodo di estensione specifica il tipo di dati che il metodo estende.</span><span class="sxs-lookup"><span data-stu-id="8e65e-105">The first parameter of an extension method specifies the data type that the method extends.</span></span> <span data-ttu-id="8e65e-106">Quando viene eseguito il metodo, il primo parametro è associato all'istanza del tipo di dati che richiama il metodo.</span><span class="sxs-lookup"><span data-stu-id="8e65e-106">When the method is executed, the first parameter is bound to the instance of the data type that invokes the method.</span></span> <span data-ttu-id="8e65e-107">Di conseguenza, il primo parametro è obbligatorio e non può essere facoltativo.</span><span class="sxs-lookup"><span data-stu-id="8e65e-107">Therefore, the first parameter is required and cannot be optional.</span></span>  
+ <span data-ttu-id="92d2c-105">Il primo parametro di un metodo di estensione specifica il tipo di dati che il metodo estende.</span><span class="sxs-lookup"><span data-stu-id="92d2c-105">The first parameter of an extension method specifies the data type that the method extends.</span></span> <span data-ttu-id="92d2c-106">Quando viene eseguito il metodo, il primo parametro è associato all'istanza del tipo di dati che richiama il metodo.</span><span class="sxs-lookup"><span data-stu-id="92d2c-106">When the method is executed, the first parameter is bound to the instance of the data type that invokes the method.</span></span> <span data-ttu-id="92d2c-107">Di conseguenza, il primo parametro è obbligatorio e non può essere facoltativo.</span><span class="sxs-lookup"><span data-stu-id="92d2c-107">Therefore, the first parameter is required and cannot be optional.</span></span>  
   
- <span data-ttu-id="8e65e-108">La restrizione si applica solo al primo parametro.</span><span class="sxs-lookup"><span data-stu-id="8e65e-108">The restriction applies only to the first parameter.</span></span> <span data-ttu-id="8e65e-109">Altri parametri possono essere facoltativi oppure no, seguendo le stesse regole di qualsiasi altro metodo.</span><span class="sxs-lookup"><span data-stu-id="8e65e-109">Other parameters can be optional or not, following the same rules as in any other method.</span></span> <span data-ttu-id="8e65e-110">Per altre informazioni, vedere [Parameter List](../../visual-basic/language-reference/statements/parameter-list.md).</span><span class="sxs-lookup"><span data-stu-id="8e65e-110">For more information, see [Parameter List](../../visual-basic/language-reference/statements/parameter-list.md).</span></span>  
+ <span data-ttu-id="92d2c-108">La restrizione si applica solo al primo parametro.</span><span class="sxs-lookup"><span data-stu-id="92d2c-108">The restriction applies only to the first parameter.</span></span> <span data-ttu-id="92d2c-109">Altri parametri possono essere facoltativi oppure no, seguendo le stesse regole di qualsiasi altro metodo.</span><span class="sxs-lookup"><span data-stu-id="92d2c-109">Other parameters can be optional or not, following the same rules as in any other method.</span></span> <span data-ttu-id="92d2c-110">Per altre informazioni, vedere [Parameter List](../language-reference/statements/parameter-list.md).</span><span class="sxs-lookup"><span data-stu-id="92d2c-110">For more information, see [Parameter List](../language-reference/statements/parameter-list.md).</span></span>  
   
- <span data-ttu-id="8e65e-111">**ID errore:** BC36553</span><span class="sxs-lookup"><span data-stu-id="8e65e-111">**Error ID:** BC36553</span></span>  
+ <span data-ttu-id="92d2c-111">**ID errore:** BC36553</span><span class="sxs-lookup"><span data-stu-id="92d2c-111">**Error ID:** BC36553</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8e65e-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8e65e-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="92d2c-112">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="92d2c-112">To correct this error</span></span>  
   
-- <span data-ttu-id="8e65e-113">Se si vuole che il primo parametro corrente specifichi il tipo di dati che viene esteso, rimuovere la parola chiave `Optional` .</span><span class="sxs-lookup"><span data-stu-id="8e65e-113">If you want the current first parameter to specify the data type being extended, remove the `Optional` keyword.</span></span>  
+- <span data-ttu-id="92d2c-113">Se si vuole che il primo parametro corrente specifichi il tipo di dati che viene esteso, rimuovere la parola chiave `Optional` .</span><span class="sxs-lookup"><span data-stu-id="92d2c-113">If you want the current first parameter to specify the data type being extended, remove the `Optional` keyword.</span></span>  
   
-- <span data-ttu-id="8e65e-114">Se il primo parametro corrente è un parametro standard al metodo e si vuole che rappresenti il tipo di dati da estendere, aggiungere un nuovo primo parametro.</span><span class="sxs-lookup"><span data-stu-id="8e65e-114">If the current first parameter is a standard parameter to the method and you do not want it to represent the data type being extended, add a new first parameter.</span></span>  
+- <span data-ttu-id="92d2c-114">Se il primo parametro corrente è un parametro standard al metodo e si vuole che rappresenti il tipo di dati da estendere, aggiungere un nuovo primo parametro.</span><span class="sxs-lookup"><span data-stu-id="92d2c-114">If the current first parameter is a standard parameter to the method and you do not want it to represent the data type being extended, add a new first parameter.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="8e65e-115">Esempio</span><span class="sxs-lookup"><span data-stu-id="8e65e-115">Example</span></span>  
- <span data-ttu-id="8e65e-116">Il primo parametro nell'esempio seguente è l'unica indicazione che il metodo `Print` estende il tipo di dati `String` .</span><span class="sxs-lookup"><span data-stu-id="8e65e-116">The first parameter in the following example is the only indication that the `Print` method extends the `String` data type.</span></span> <span data-ttu-id="8e65e-117">Di conseguenza, non può essere facoltativo.</span><span class="sxs-lookup"><span data-stu-id="8e65e-117">Therefore, it cannot be optional.</span></span>  
+## <a name="example"></a><span data-ttu-id="92d2c-115">Esempio</span><span class="sxs-lookup"><span data-stu-id="92d2c-115">Example</span></span>  
+ <span data-ttu-id="92d2c-116">Il primo parametro nell'esempio seguente è l'unica indicazione che il metodo `Print` estende il tipo di dati `String` .</span><span class="sxs-lookup"><span data-stu-id="92d2c-116">The first parameter in the following example is the only indication that the `Print` method extends the `String` data type.</span></span> <span data-ttu-id="92d2c-117">Di conseguenza, non può essere facoltativo.</span><span class="sxs-lookup"><span data-stu-id="92d2c-117">Therefore, it cannot be optional.</span></span>  
   
 ```vb  
 <Extension()>  
@@ -39,14 +39,14 @@ Public Sub Print (ByVal str As String)
 End Sub  
 ```  
   
- <span data-ttu-id="8e65e-118">Quando il metodo di estensione viene chiamato nel modo seguente, il parametro `str` nel metodo viene associato a `greeting`, l'istanza di `String` che chiama `Print`.</span><span class="sxs-lookup"><span data-stu-id="8e65e-118">When the extension method is called as follows, parameter `str` in the method is bound to `greeting`, the instance of `String` that calls `Print`.</span></span> <span data-ttu-id="8e65e-119">Il compilatore usa `greeting` come argomento al metodo di estensione `Print`.</span><span class="sxs-lookup"><span data-stu-id="8e65e-119">The compiler uses `greeting` as the argument to extension method `Print`.</span></span>  
+ <span data-ttu-id="92d2c-118">Quando il metodo di estensione viene chiamato nel modo seguente, il parametro `str` nel metodo viene associato a `greeting`, l'istanza di `String` che chiama `Print`.</span><span class="sxs-lookup"><span data-stu-id="92d2c-118">When the extension method is called as follows, parameter `str` in the method is bound to `greeting`, the instance of `String` that calls `Print`.</span></span> <span data-ttu-id="92d2c-119">Il compilatore usa `greeting` come argomento al metodo di estensione `Print`.</span><span class="sxs-lookup"><span data-stu-id="92d2c-119">The compiler uses `greeting` as the argument to extension method `Print`.</span></span>  
   
 ```vb  
 Dim greeting As String = "Hello"  
 greeting.Print()  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="8e65e-120">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8e65e-120">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="92d2c-120">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="92d2c-120">See also</span></span>
 
-- [<span data-ttu-id="8e65e-121">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="8e65e-121">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="8e65e-122">Parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="8e65e-122">Optional Parameters</span></span>](../../visual-basic/programming-guide/language-features/procedures/optional-parameters.md)
+- [<span data-ttu-id="92d2c-121">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="92d2c-121">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="92d2c-122">Parametri facoltativi</span><span class="sxs-lookup"><span data-stu-id="92d2c-122">Optional Parameters</span></span>](../programming-guide/language-features/procedures/optional-parameters.md)
