--- a/docs/visual-basic/misc/bc36565.md
+++ b/docs/visual-basic/misc/bc36565.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC36565
 ms.assetid: 7ed937fb-c5a4-4e4d-90f6-4f1c6ef4f74a
-ms.openlocfilehash: 54980ba05dd253552098422a4d64d03e6d0aa17c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ea8cdf15e1e6088b9622c1431ac63ce0b81a5953
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64666151"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378172"
 ---
-# <a name="too-many-arguments"></a><span data-ttu-id="250ab-102">Troppi argomenti</span><span class="sxs-lookup"><span data-stu-id="250ab-102">Too many arguments</span></span>
-<span data-ttu-id="250ab-103">Il numero di argomenti forniti in una chiamata di routine supera il numero di argomenti definiti per la routine.</span><span class="sxs-lookup"><span data-stu-id="250ab-103">The number of arguments supplied in a procedure call exceeds the number of arguments defined for the procedure.</span></span>  
+# <a name="too-many-arguments"></a><span data-ttu-id="e4aec-102">Troppi argomenti</span><span class="sxs-lookup"><span data-stu-id="e4aec-102">Too many arguments</span></span>
+<span data-ttu-id="e4aec-103">Il numero di argomenti forniti in una chiamata di routine supera il numero di argomenti definiti per la routine.</span><span class="sxs-lookup"><span data-stu-id="e4aec-103">The number of arguments supplied in a procedure call exceeds the number of arguments defined for the procedure.</span></span>  
   
- <span data-ttu-id="250ab-104">**ID errore:** BC36565</span><span class="sxs-lookup"><span data-stu-id="250ab-104">**Error ID:** BC36565</span></span>  
+ <span data-ttu-id="e4aec-104">**ID errore:** BC36565</span><span class="sxs-lookup"><span data-stu-id="e4aec-104">**Error ID:** BC36565</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="250ab-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="250ab-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e4aec-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e4aec-105">To correct this error</span></span>  
   
-- <span data-ttu-id="250ab-106">Consultare la definizione della routine e rimuovere gli argomenti aggiuntivi dalla chiamata.</span><span class="sxs-lookup"><span data-stu-id="250ab-106">Consult the definition of the procedure, and remove the extra arguments from the call.</span></span>  
+- <span data-ttu-id="e4aec-106">Consultare la definizione della routine e rimuovere gli argomenti aggiuntivi dalla chiamata.</span><span class="sxs-lookup"><span data-stu-id="e4aec-106">Consult the definition of the procedure, and remove the extra arguments from the call.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="250ab-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="250ab-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e4aec-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e4aec-107">See also</span></span>
 
-- [<span data-ttu-id="250ab-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="250ab-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="e4aec-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="e4aec-108">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
