--- a/docs/visual-basic/misc/bc36575.md
+++ b/docs/visual-basic/misc/bc36575.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36575
 ms.assetid: b87be29e-39f0-4830-9969-608d71137e3e
-ms.openlocfilehash: 1373af9d56a0b001c20d9a3b514b9a1aedcd3313
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4dfcecb7a8b3e183ad0d63ae1761115ef0cac516
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663658"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377795"
 ---
-# <a name="anonymous-type-member-name-must-be-preceded-by-a-period"></a><span data-ttu-id="b5db3-102">Il nome di membro di tipo anonimo deve essere preceduto da un punto</span><span class="sxs-lookup"><span data-stu-id="b5db3-102">Anonymous type member name must be preceded by a period</span></span>
-<span data-ttu-id="b5db3-103">Nell'elenco degli inizializzatori di oggetto per una dichiarazione di tipo anonimo, un nuovo nome di membro a cui è assegnato un valore deve essere preceduto da un punto.</span><span class="sxs-lookup"><span data-stu-id="b5db3-103">In the object initializer list for an anonymous type declaration, a new member name to which a value is assigned must be preceded by a period.</span></span> <span data-ttu-id="b5db3-104">L'esempio seguente mostra una dichiarazione valida e una dichiarazione non valida:</span><span class="sxs-lookup"><span data-stu-id="b5db3-104">The following example shows a valid and an invalid declaration:</span></span>  
+# <a name="anonymous-type-member-name-must-be-preceded-by-a-period"></a><span data-ttu-id="cc721-102">Il nome di membro di tipo anonimo deve essere preceduto da un punto</span><span class="sxs-lookup"><span data-stu-id="cc721-102">Anonymous type member name must be preceded by a period</span></span>
+<span data-ttu-id="cc721-103">Nell'elenco degli inizializzatori di oggetto per una dichiarazione di tipo anonimo, un nuovo nome di membro a cui è assegnato un valore deve essere preceduto da un punto.</span><span class="sxs-lookup"><span data-stu-id="cc721-103">In the object initializer list for an anonymous type declaration, a new member name to which a value is assigned must be preceded by a period.</span></span> <span data-ttu-id="cc721-104">L'esempio seguente mostra una dichiarazione valida e una dichiarazione non valida:</span><span class="sxs-lookup"><span data-stu-id="cc721-104">The following example shows a valid and an invalid declaration:</span></span>  
   
 ```vb  
 ' Valid.  
@@ -24,12 +24,12 @@ Dim instanceName1 = New With {.memberName = 10}
 ' Dim instanceName2 = New With {memberName = 10}  
 ```  
   
- <span data-ttu-id="b5db3-105">**ID errore:** BC36575</span><span class="sxs-lookup"><span data-stu-id="b5db3-105">**Error ID:** BC36575</span></span>  
+ <span data-ttu-id="cc721-105">**ID errore:** BC36575</span><span class="sxs-lookup"><span data-stu-id="cc721-105">**Error ID:** BC36575</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b5db3-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b5db3-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cc721-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="cc721-106">To correct this error</span></span>  
   
-- <span data-ttu-id="b5db3-107">Aggiungere un punto prima del nome del membro.</span><span class="sxs-lookup"><span data-stu-id="b5db3-107">Add a period before the member name.</span></span>  
+- <span data-ttu-id="cc721-107">Aggiungere un punto prima del nome del membro.</span><span class="sxs-lookup"><span data-stu-id="cc721-107">Add a period before the member name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b5db3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b5db3-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="cc721-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="cc721-108">See also</span></span>
 
-- [<span data-ttu-id="b5db3-109">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="b5db3-109">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="cc721-109">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="cc721-109">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
