--- a/docs/visual-basic/misc/bc36576.md
+++ b/docs/visual-basic/misc/bc36576.md
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC36576
 ms.assetid: 02217cc4-8972-4a6d-97a6-4ecbb7399af2
-ms.openlocfilehash: 7a46256ef3fbd8ada4a0abb000ccc704185a41c0
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: aa10a3363c1bd5aa99c9cd8e272aa1093c2838a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353384"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377730"
 ---
-# <a name="identifier-expected-preceded-with-a-period"></a><span data-ttu-id="d0c0c-102">È previsto l'identificatore preceduto da un punto</span><span class="sxs-lookup"><span data-stu-id="d0c0c-102">Identifier expected, preceded with a period</span></span>
-<span data-ttu-id="d0c0c-103">Nell'elenco di inizializzatori di una dichiarazione di tipo anonimo è stato incluso un valore da cui non è possibile dedurre il nome della proprietà, non assegnato a un nome di proprietà.</span><span class="sxs-lookup"><span data-stu-id="d0c0c-103">A value from which a property name cannot be inferred has been included in the initializer list of an anonymous type declaration without being assigned to a property name.</span></span>  
+# <a name="identifier-expected-preceded-with-a-period"></a><span data-ttu-id="948c6-102">È previsto l'identificatore preceduto da un punto</span><span class="sxs-lookup"><span data-stu-id="948c6-102">Identifier expected, preceded with a period</span></span>
+<span data-ttu-id="948c6-103">Nell'elenco di inizializzatori di una dichiarazione di tipo anonimo è stato incluso un valore da cui non è possibile dedurre il nome della proprietà, non assegnato a un nome di proprietà.</span><span class="sxs-lookup"><span data-stu-id="948c6-103">A value from which a property name cannot be inferred has been included in the initializer list of an anonymous type declaration without being assigned to a property name.</span></span>  
   
 ```vb  
 ' Not valid.  
 ' Dim anon1 = New With {.grade = 100, 95}  
 ```  
   
- <span data-ttu-id="d0c0c-104">**ID errore:** BC36576</span><span class="sxs-lookup"><span data-stu-id="d0c0c-104">**Error ID:** BC36576</span></span>  
+ <span data-ttu-id="948c6-104">**ID errore:** BC36576</span><span class="sxs-lookup"><span data-stu-id="948c6-104">**Error ID:** BC36576</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d0c0c-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d0c0c-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="948c6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="948c6-105">To correct this error</span></span>  
   
-- <span data-ttu-id="d0c0c-106">Specificare un nome di proprietà per ogni valore nell'elenco di inizializzatori, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="d0c0c-106">Provide a property name for each value in the initializer list, as shown in the following code:</span></span>  
+- <span data-ttu-id="948c6-106">Specificare un nome di proprietà per ogni valore nell'elenco di inizializzatori, come mostrato nel codice seguente:</span><span class="sxs-lookup"><span data-stu-id="948c6-106">Provide a property name for each value in the initializer list, as shown in the following code:</span></span>  
   
     ```vb  
     Dim anon2 = New With {.grade1 = 100, .grade2 = 95}  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="d0c0c-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d0c0c-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="948c6-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="948c6-107">See also</span></span>
 
-- [<span data-ttu-id="d0c0c-108">Inizializzatori di oggetto: tipi denominati e tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="d0c0c-108">Object Initializers: Named and Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
-- [<span data-ttu-id="d0c0c-109">Tipi anonimi (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="d0c0c-109">Anonymous Types (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [<span data-ttu-id="d0c0c-110">Procedura: Dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="d0c0c-110">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [<span data-ttu-id="948c6-108">Inizializzatori di oggetto: tipi denominati e tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="948c6-108">Object Initializers: Named and Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
+- [<span data-ttu-id="948c6-109">Tipi anonimi (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="948c6-109">Anonymous Types (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="948c6-110">Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="948c6-110">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
