--- a/docs/visual-basic/misc/bc36632.md
+++ b/docs/visual-basic/misc/bc36632.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC36632
 ms.assetid: 5d636359-4b4d-4f0b-8ca0-b0e6bc538dab
-ms.openlocfilehash: bdcc242ba930e44850e717c1e8100f9054057437
-ms.sourcegitcommit: 99b153b93bf94d0fecf7c7bcecb58ac424dfa47c
+ms.openlocfilehash: 0d15a8417417002f9a8c13a498fb27d9adee88cb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/25/2020
-ms.locfileid: "80248960"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398812"
 ---
-# <a name="nullable-parameters-must-specify-a-type"></a><span data-ttu-id="f2a50-102">I parametri nullable devono specificare un tipo</span><span class="sxs-lookup"><span data-stu-id="f2a50-102">Nullable parameters must specify a type</span></span>
-<span data-ttu-id="f2a50-103">Un parametro include un modificatore di tipo nullable (?) ma non specifica un tipo.</span><span class="sxs-lookup"><span data-stu-id="f2a50-103">A parameter includes the nullable type modifier (?) but does not specify a type.</span></span>  
+# <a name="nullable-parameters-must-specify-a-type"></a><span data-ttu-id="80e45-102">I parametri nullable devono specificare un tipo</span><span class="sxs-lookup"><span data-stu-id="80e45-102">Nullable parameters must specify a type</span></span>
+<span data-ttu-id="80e45-103">Un parametro include un modificatore di tipo nullable (?) ma non specifica un tipo.</span><span class="sxs-lookup"><span data-stu-id="80e45-103">A parameter includes the nullable type modifier (?) but does not specify a type.</span></span>  
   
- <span data-ttu-id="f2a50-104">**ID errore:** BC36632</span><span class="sxs-lookup"><span data-stu-id="f2a50-104">**Error ID:** BC36632</span></span>  
+ <span data-ttu-id="80e45-104">**ID errore:** BC36632</span><span class="sxs-lookup"><span data-stu-id="80e45-104">**Error ID:** BC36632</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f2a50-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f2a50-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="80e45-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="80e45-105">To correct this error</span></span>  
   
-- <span data-ttu-id="f2a50-106">Specificare un tipo quando si dichiara il parametro di tipo valore nullable.</span><span class="sxs-lookup"><span data-stu-id="f2a50-106">Specify a type when declaring the nullable value type parameter.</span></span>  
+- <span data-ttu-id="80e45-106">Specificare un tipo quando si dichiara il parametro di tipo valore Nullable.</span><span class="sxs-lookup"><span data-stu-id="80e45-106">Specify a type when declaring the nullable value type parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f2a50-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f2a50-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="80e45-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="80e45-107">See also</span></span>
 
-- [<span data-ttu-id="f2a50-108">Tipi di valore nullableNullable Value Types</span><span class="sxs-lookup"><span data-stu-id="f2a50-108">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
+- [<span data-ttu-id="80e45-108">Tipi di valore Nullable</span><span class="sxs-lookup"><span data-stu-id="80e45-108">Nullable Value Types</span></span>](../programming-guide/language-features/data-types/nullable-value-types.md)
