--- a/docs/visual-basic/misc/bc36643.md
+++ b/docs/visual-basic/misc/bc36643.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36643
 ms.assetid: 34b6141b-6eab-4641-a3f4-53ef28c1792b
-ms.openlocfilehash: 88bd9cff4f9b8016fdc04f1afa7ef1a1c4371423
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0824bee561cfca32cdb86d248cd18431acfa3462
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604545"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398708"
 ---
-# <a name="array-modifiers-cannot-be-specified-on-lambda-expression-parameters-name-only-on-its-type"></a><span data-ttu-id="2143b-102">Non è possibile specificare modificatori di matrici nel nome di parametro dell'espressione lambda. Specificarli nel tipo</span><span class="sxs-lookup"><span data-stu-id="2143b-102">Array modifiers cannot be specified on lambda expression parameters name, only on its type</span></span>
-<span data-ttu-id="2143b-103">Gli argomenti di matrice possono essere inviati alle espressioni lambda, ma la dichiarazione di parametro deve includere il tipo di elemento.</span><span class="sxs-lookup"><span data-stu-id="2143b-103">Array arguments can be sent to lambda expressions, but the parameter declaration must include the element type.</span></span>  
+# <a name="array-modifiers-cannot-be-specified-on-lambda-expression-parameters-name-only-on-its-type"></a><span data-ttu-id="8054f-102">Non è possibile specificare modificatori di matrici nel nome di parametro dell'espressione lambda. Specificarli nel tipo</span><span class="sxs-lookup"><span data-stu-id="8054f-102">Array modifiers cannot be specified on lambda expression parameters name, only on its type</span></span>
+<span data-ttu-id="8054f-103">Gli argomenti di matrice possono essere inviati alle espressioni lambda, ma la dichiarazione di parametro deve includere il tipo di elemento.</span><span class="sxs-lookup"><span data-stu-id="8054f-103">Array arguments can be sent to lambda expressions, but the parameter declaration must include the element type.</span></span>  
   
 ```vb  
 ' Not valid.  
@@ -26,12 +26,12 @@ Dim arrayExample2 = Function(arrayPara() As Integer) arrayPara.Length > 0
 Dim arrayexample3 = Function(arrayPara As Integer()) arrayPara.Length > 0  
 ```  
   
- <span data-ttu-id="2143b-104">**ID errore:** BC36643</span><span class="sxs-lookup"><span data-stu-id="2143b-104">**Error ID:** BC36643</span></span>  
+ <span data-ttu-id="8054f-104">**ID errore:** BC36643</span><span class="sxs-lookup"><span data-stu-id="8054f-104">**Error ID:** BC36643</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2143b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2143b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8054f-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8054f-105">To correct this error</span></span>  
   
-- <span data-ttu-id="2143b-106">Specificare il tipo di elementi contenuti nel segmento di matrice.</span><span class="sxs-lookup"><span data-stu-id="2143b-106">Specify the type of the elements in the array parameter.</span></span>  
+- <span data-ttu-id="8054f-106">Specificare il tipo di elementi contenuti nel segmento di matrice.</span><span class="sxs-lookup"><span data-stu-id="8054f-106">Specify the type of the elements in the array parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2143b-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2143b-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8054f-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8054f-107">See also</span></span>
 
-- [<span data-ttu-id="2143b-108">Espressioni lambda</span><span class="sxs-lookup"><span data-stu-id="2143b-108">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [<span data-ttu-id="8054f-108">Espressioni lambda</span><span class="sxs-lookup"><span data-stu-id="8054f-108">Lambda Expressions</span></span>](../programming-guide/language-features/procedures/lambda-expressions.md)
